syntax = "proto3";
package service.user;
option go_package = "generated/user-protobuf";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc GetUserById(GetUserByIdRequest) returns (User);
  rpc GetUsersPaginated(GetUsersPaginatedRequest)
      returns (GetUsersPaginatedResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (Session);
  rpc RequestAuthentication(RequestAuthenticationRequest) returns (Empty);
  rpc AuthenticateWithOTP(OTPAuthenticationRequest) returns (Session);
  rpc GetActiveSessions(GetActiveSessionsRequest)
      returns (GetActiveSessionsResponse);
  rpc InvalidateSession(InvalidateSessionRequest) returns (Empty);
}

message Empty {}

message InvalidateSessionRequest {
  string sessionId = 1;
  string userId = 2;
}

message GetActiveSessionsRequest { string userId = 1; }

message ActiveSession {
  string sessionId = 1;
  string expires = 2;
  string createdAt = 3;
  string device = 4;
  string application = 5;
  string ipAddress = 6;
}

message GetActiveSessionsResponse { repeated ActiveSession sessions = 1; }

message GetUserByIdRequest { string userId = 1; }

message GetUsersPaginatedRequest {
  uint32 take = 1;
  uint32 offset = 2;
}

message GetUsersPaginatedResponse {
  uint32 count = 1;
  repeated User users = 2;
}

message RequestAuthenticationRequest { string phoneNumber = 1; }

message RefreshTokenRequest { string refreshToken = 1; }

message OTPAuthenticationRequest {
  string phoneNumber = 1;
  string code = 2;
  string device = 3;
  string application = 4;
  string ipAddress = 5;
}

message CreateUserRequest {
  string phoneNumber = 1;
  string firstName = 2;
  string lastName = 3;
  string address = 4;
  string birthDate = 5;
}

message User {
  string userId = 1;
  string phoneNumber = 2;
  string firstName = 3;
  string lastName = 4;
  string address = 5;
  string createdAt = 6;
  string birthDate = 7;
}

message Session {
  string accessToken = 1;
  string refreshToken = 2;
  string accessTokenExpires = 3;
  string refreshTokenExpires = 4;
}
